<resources>
    <string name="app_name">Adres Defteri</string>
    <string name="yeni">Yeni</string>
    <string name="ad">Ad:</string>
    <string name="soyad">Soyad:</string>
    <string name="telefon">Telefon:</string>
    <string name="email">E Mail:</string>
    <string name="ekle">Ekle</string>
    <string name="guncelle">Güncelle</string>
    <string name="msgtelefonnumarasiyok">Telefon numarası yok</string>
    <string name="msgyetkiyok">Yetki yok!</string>
</resources>
